# fatum

./: .gitignore  .rustfml.toml  Cargo.toml  flake.nix  rust-toolchain.toml
core/: Cargo.toml
core/macros/: Cargo.toml
core/macros/src/: lib.rs
core/src/: app.rs  build.rs  lib.rs  main.rs
core/src/behaviours/: mod.rs  object_renderable.rs  renderable.rs  updatable.rs
core/src/components/: camera.rs  camera2d.rs  camera3d.rs  mod.rs  model.rs  sprite.rs  sprite2d.rs  transform.rs  ui.rs
core/src/engine/: core.rs  core_engine.rs  graphics.rs  graphics_engine.rs  input.rs  mod.rs  resource_engine.rs  scene.rs  ui.rs
core/src/engine/ui/: mod.rs  opengl.rs
core/src/helpers/: mat4.rs
core/src/input/: action.rs  action_map.rs  combo.rs  input.rs  input_map.rs  key.rs  mod.rs  mouse.rs
core/src/nodes/: mod.rs  node2d.rs  node3d.rs  sprite2d.rs
core/src/nodes/2d/: camera2d.rs  mod.rs  sprite2d.rs
core/src/nodes/3d/: camera3d.rs  mod.rs  model3d.rs  primitives.rs
core/src/nodes/ui/: element.rs  mod.rs  window.rs
core/src/resources/: action_map.rs  mod.rs  text.rs  texture2d.rs
core/tests/: basic_3d.rs  basic_app.rs  imgui.rs  input.rs  resources.rs  scene_graph.rs  ui.rs
core/tests/assets/: hello.txt.asset  input_test.actionmap  input_test.actionmap.asset
extensions/gltf/: Cargo.toml
extensions/gltf/src/: resource.rs
extensions/gltf/tests/: viewer.rs
graphics/: Cargo.toml
graphics/src/: camera.rs  color.rs  error.rs  lib.rs  material.rs  mesh.rs  model.rs  vertex.rs  window.rs
graphics/src/platform/: mod.rs
graphics/src/platform/opengl/: mod.rs  render_queue.rs  render_target.rs  shader.rs  shader_data.rs  shader_program.rs  texture_2d.rs  window.rs
graphics/src/platform/opengl/pipeline/: default.rs  mod.rs  pbr.rs
graphics/src/render/: mod.rs  object.rs  pipeline.rs  queue.rs  target.rs
graphics/src/shader/: data.rs  mod.rs  program.rs
graphics/src/texture/: 2d.rs  mod.rs  options.rs
graphics/tests/: hello_triangle.rs  textures.rs  windowing.rs  winit.rs  winit2.rs
resources/: Cargo.toml
resources/src/: error.rs  lib.rs  manager.rs  metadata.rs  resource.rs
scene/: Cargo.toml
scene/macros/: Cargo.toml
scene/macros/src/: lib.rs
scene/src/: base.rs  behaviour.rs  component.rs  graph.rs  iterators.rs  lib.rs  node.rs  scene.rs  tree.rs
signals/: Cargo.toml
signals/src/: dispatcher.rs  lib.rs  signal.rs
signals/tests/: dispatcher.rs  simple.rs
world/: Cargo.toml
