[package]
name = "fatum"
version = "0.1.0"
edition = "2024"

[lib]
name = "fatum"
path = "src/lib.rs"

[[bin]]
name = "fatum"
path = "src/main.rs"

[dependencies]
fatum_graphics = { path = "../graphics" }
fatum_resources = { path = "../resources" }
ftail = "0.3.1"
glam = { version = "0.30.9", features = ["bytemuck"] }
image = "0.25.8"
log = "0.4.28"
ron = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
symlink = "0.1.0"

[dev-dependencies]
simple_logger = "5.1.0"

# [features]
# logging = ["dep:structured-logger"]
