[package]
name = "fatum_graphics"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.24.0", features = ["derive"] }
glam = { version = "0.30.9", features = ["bytemuck"] }
glow = { version = "0.16.0", features = ["debug_automatic_glGetError"] }
image = "0.25.8"
serde = { version = "1.0.228", features = ["derive"] }
fatum_resources = { path = "../resources" }
log = "0.4.28"
winit = "0.30.12"
glutin = "0.32.3"
glutin-winit = "0.5.0"
