[package]
name = "fatum_graphics"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.24.0", features = ["derive"] }
glam = { version = "0.30.9", features = ["bytemuck"] }
glow = { version = "0.16.0", features = ["debug_automatic_glGetError"] }
image = "0.25.8"
serde = { version = "1.0.228", features = ["derive"] }
fatum_resources = { path = "../resources" }
log = "0.4.28"
winit = { version = "0.30.12", default-features = false, features = [ "x11", "rwh_06" ] }
glutin = { version = "0.32.3", default-features = false, features = [ "x11", "egl", "glx", "wgl" ] }
glutin-winit = { version = "0.5.0", default-features = false, features = [ "x11", "egl", "glx", "wgl" ] }
