[package]
name = "fatum_scene"
version = "0.1.0"
edition = "2024"

[dependencies]
fatum_scene_macros = { path = "./macros", optional = true }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
signals2 = { version = "0.3.3", optional = true }

[features]
default = ["macros", "signals"]
macros = ["dep:fatum_scene_macros"]
signals = ["dep:signals2"]
