[package]
name = "fatum_scene"
version = "0.1.0"
edition = "2024"

[dependencies]
fatum_scene_macros = { path = "./macros", optional = true }
fatum_signals = { path = "../signals" }
log = "0.4.28"
rand = "0.9.2"
ron = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }

[features]
default = ["macros"]
macros = ["dep:fatum_scene_macros"]
